--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 
+    <h1>Welcome to Rock, paper, Scissors Game</h1>
+    <button class="start">Start Game</button>
 
 
-<script src="./js/script.js"></script>
+    <div class="btngroup">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="Scissors">Scissors</button>
+    </div>
+
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
