--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         <button class="paper">Paper</button>
         <button class="Scissors">Scissors</button>
     </div>
+    <div class="btngroup2">
+        <button class="rock2">Rock</button>
+        <button class="paper2">Paper</button>
+        <button class="Scissors2">Scissors</button>
+    </div>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/scripttwoplayer.js"></script>
 </body>
 
 </html>
