--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button class="Scissors2">Scissors</button>
     </div>
 
-    <!-- <script src="./js/script.js"></script> -->
-    <script src="./js/scripttwoplayer.js"></script>
+    <script src="./js/script.js"></script>
+    <!-- <script src="./js/scripttwoplayer.js"></script> -->
 </body>
 
 </html>
